--- a/index.html
+++ b/index.html
@@ -3,8 +3,24 @@
   <head>
     <link rel="stylesheet" href="assets/css/app.css"/>
     <title>Wandy Purnomo</title>
+    <style type="text/css">
+      .no-js #loader { display: none;  }
+      .js #loader { display: block; position: absolute; left: 100px; top: 0; }
+      .preloader {
+      	position: fixed;
+      	left: 0px;
+      	top: 0px;
+      	width: 100%;
+      	height: 100%;
+      	z-index: 9999;
+      	background: url(assets/image/preloader.gif) center no-repeat #fff;
+      }
+    </style>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script><script>$(function(){$(".preloader").fadeOut("slow");$('[data-toggle="tooltip"]').tooltip()});</script>
   </head>
   <body>
+    <div class="preloader"></div>
     <div id="main-container" class="container">
       <div class="col-sm-12">
         <div id="profile"><img src="assets/image/wandx.jpg" alt="" class="img-circle img-responsive"/>
@@ -172,7 +188,5 @@
         </div>
       </div>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script><script>$(function(){$('[data-toggle="tooltip"]').tooltip()})</script>
   </body>
 </html>
