--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <link rel="stylesheet" href="assets/css/app.css"/>
     <title>Wandy Purnomo</title>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style type="text/css">
       .no-js #loader { display: none;  }
       .js #loader { display: block; position: absolute; left: 100px; top: 0; }
