--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="preloader"></div>
     <div id="main-container" class="container">
       <div class="col-sm-12">
-        <div id="profile"><img src="assets/image/wandx.jpg" alt="" class="img-circle img-responsive"/>
+        <div id="profile"><img src="assets/image/wandx2.jpg" alt="" class="img-circle img-responsive"/>
           <div id="name">
             <h1>wandy purnomo</h1>
             <h3>{ web developer }</h3>
